--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
+/* index.css */
+@import url('https://fonts.cdnfonts.com/css/neutra-text-alt');
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Neutra Text', sans-serif !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bodybold {
+  font-family: 'Neutra Text', sans-serif !important;
+}
+.table thead {
+  background-color: #322625;
+  color: #ebebeb;
+}
+
+.table tbody tr:hover {
+  background-color: #c0e3e5;
+}
+
+.btn-outline-dark {
+  border-color: #322625;
+  color: #322625;
+}
+
+.btn-outline-dark:hover {
+  background-color: #322625;
+  color: #ebebeb;
+}
+
+
+.search-input-container {
+  display: flex;
+  align-items: center;
+}
+
+
+.filter-input {
+  min-width: 200px; /* Ensure all inputs have a minimum width */
+  border: 1px solid #322625; /* Set a consistent border color */
+  border-radius: 4px; /* Consistent border radius */
+  padding: 0.375rem 0.75rem; /* Consistent padding */
+  background-color: #c0e3e5; /* Set background color for all inputs */
+}
+
+/* Optional: Add some margin to the right of inputs except the last one */
+.filters .form-control:not(:last-child) {
+  margin-right: 1rem; /* Adjust as needed */
+}
+
+/* Style the select dropdown specifically */
+.filter-input {
+  appearance: none; /* Remove default styling for cross-browser consistency */
+}
+
+/* Optional: Add a focus style */
+.filter-input:focus {
+  border-color: #c0e3e5; /* Focus border color */
+  outline: none; /* Remove default outline */
+  box-shadow: 0 0 0.2rem rgba(192, 227, 229, 0.5); /* Optional focus shadow */
 }
